--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -68,10 +68,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir(\"..\")\n",
     "import sys\n",
     "sys.path.append('..')\n",
     "import logging\n",
-    "logging.basicConfig(level=logging.ERROR)"
+    "logging.basicConfig(level=logging.WARN)"
    ]
   },
   {
@@ -90,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:00<00:00, 383.28it/s]\n"
+      "100%|██████████| 300/300 [00:00<00:00, 389.73it/s]\n"
      ]
     }
    ],
@@ -99,6 +101,7 @@
     "from janusq.data_objects.backend import LinearBackend\n",
     "from janusq.data_objects.random_circuit import random_circuits\n",
     "from janusq.analysis.vectorization import RandomwalkModel\n",
+    "\n",
     "# define a 10-qubit backend\n",
     "n_qubits = 8\n",
     "n_steps = 1\n",
@@ -137,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'111': 1, '011': 23, '110': 27, '001': 356, '100': 262, '101': 14, '010': 688, '000': 8629}, {'011': 685, '111': 24, '101': 269, '010': 37, '000': 497, '100': 16, '001': 8472}, {'101': 15, '110': 19, '100': 261, '001': 349, '111': 1, '011': 25, '010': 718, '000': 8612}, {'101': 1, '100': 10, '001': 14, '110': 301, '000': 402, '010': 8909, '111': 15, '011': 348}, {'101': 9, '011': 8819, '111': 280, '110': 21, '001': 382, '000': 27, '010': 462}, {'101': 1, '111': 5, '011': 373, '100': 8, '001': 16, '110': 279, '010': 8905, '000': 413}, {'011': 31, '101': 8, '100': 274, '001': 356, '110': 18, '010': 672, '000': 8641}, {'100': 14, '001': 8525, '000': 487, '010': 33, '101': 279, '111': 19, '011': 643}, {'101': 12, '110': 19, '100': 289, '001': 359, '111': 1, '011': 26, '010': 677, '000': 8617}, {'011': 7, '111': 24, '001': 30, '110': 654, '100': 8179, '010': 58, '000': 736, '101': 312}, {'011': 49, '111': 626, '110': 25, '001': 748, '100': 432, '010': 4, '000': 43, '101': 8073}, {'011': 1, '111': 25, '010': 51, '000': 752, '101': 331, '001': 23, '110': 644, '100': 8173}, {'101': 8, '011': 22, '111': 335, '110': 8416, '100': 363, '000': 29, '010': 827}, {'000': 2, '010': 34, '100': 20, '001': 31, '110': 446, '101': 326, '011': 784, '111': 8357}, {'101': 16, '001': 2, '110': 8416, '100': 385, '111': 331, '011': 37, '000': 26, '010': 787}, {'011': 3, '111': 23, '001': 27, '110': 690, '100': 8168, '010': 52, '000': 753, '101': 284}, {'010': 2, '000': 44, '011': 62, '111': 596, '100': 426, '001': 769, '110': 42, '101': 8059}, {'011': 7, '111': 14, '000': 741, '010': 71, '001': 37, '100': 8180, '110': 635, '101': 315}, {'101': 9, '100': 241, '110': 24, '001': 351, '011': 24, '010': 743, '000': 8608}, {'111': 23, '011': 658, '101': 293, '000': 445, '010': 37, '110': 1, '100': 15, '001': 8528}, {'110': 18, '001': 310, '100': 246, '011': 29, '101': 15, '010': 704, '000': 8678}, {'101': 1, '001': 12, '100': 16, '110': 273, '111': 13, '011': 350, '000': 373, '010': 8962}, {'101': 10, '011': 8760, '111': 292, '000': 19, '010': 523, '110': 16, '001': 380}, {'001': 17, '110': 288, '100': 10, '111': 12, '011': 325, '000': 376, '010': 8972}, {'101': 9, '110': 14, '001': 347, '100': 271, '011': 31, '000': 8647, '010': 681}, {'011': 689, '111': 19, '101': 264, '010': 38, '000': 481, '100': 12, '001': 8497}]\n"
+      "[{'011': 10, '110': 9, '001': 634, '100': 335, '101': 28, '010': 279, '000': 8705}, {'111': 12, '011': 290, '000': 831, '010': 24, '101': 348, '100': 42, '001': 8453}, {'111': 3, '011': 23, '110': 13, '001': 609, '100': 373, '101': 21, '000': 8680, '010': 278}, {'101': 1, '011': 620, '111': 32, '010': 8863, '000': 97, '100': 2, '001': 6, '110': 379}, {'101': 2, '110': 30, '001': 83, '011': 8664, '111': 365, '000': 14, '010': 842}, {'011': 656, '111': 23, '100': 5, '001': 6, '110': 370, '000': 89, '010': 8851}, {'011': 20, '110': 12, '100': 344, '001': 555, '101': 20, '010': 323, '000': 8726}, {'011': 264, '111': 12, '010': 23, '000': 796, '101': 349, '110': 1, '100': 32, '001': 8523}, {'101': 27, '110': 7, '100': 363, '001': 646, '111': 1, '011': 26, '010': 273, '000': 8657}, {'011': 1, '111': 15, '000': 274, '010': 6, '001': 19, '100': 8803, '110': 300, '101': 582}, {'011': 7, '111': 309, '110': 27, '001': 262, '100': 814, '000': 21, '101': 8560}, {'011': 1, '111': 19, '100': 8782, '110': 286, '001': 27, '010': 15, '000': 264, '101': 606}, {'110': 8998, '100': 89, '111': 605, '011': 21, '000': 5, '010': 282}, {'101': 69, '001': 2, '100': 10, '110': 864, '010': 33, '011': 305, '111': 8717}, {'101': 6, '110': 8997, '100': 95, '011': 16, '111': 599, '000': 1, '010': 286}, {'001': 25, '100': 8802, '110': 280, '101': 571, '010': 4, '000': 293, '011': 2, '111': 23}, {'011': 13, '111': 276, '110': 25, '001': 309, '100': 805, '000': 28, '101': 8544}, {'111': 18, '011': 3, '001': 17, '100': 8796, '110': 276, '010': 11, '000': 279, '101': 600}, {'101': 29, '110': 13, '001': 571, '100': 348, '111': 1, '011': 17, '010': 291, '000': 8730}, {'110': 1, '001': 8489, '100': 41, '111': 11, '011': 291, '010': 33, '000': 792, '101': 342}, {'011': 24, '101': 29, '110': 7, '100': 345, '001': 544, '010': 286, '000': 8765}, {'011': 612, '111': 32, '100': 7, '001': 4, '110': 371, '000': 84, '010': 8890}, {'101': 5, '110': 35, '001': 84, '011': 8634, '111': 362, '000': 5, '010': 875}, {'101': 1, '011': 598, '111': 19, '010': 8898, '000': 97, '001': 5, '100': 1, '110': 381}, {'011': 16, '110': 18, '001': 583, '100': 374, '101': 18, '010': 273, '000': 8718}, {'010': 30, '000': 868, '111': 14, '011': 281, '101': 356, '100': 36, '001': 8415}]\n"
      ]
     }
    ],
@@ -193,10 +196,10 @@
    ],
    "source": [
     "# test hyqsat calibration\n",
-    "# input cnf flie\n",
-    "file_path = \"cnf_examples/UF50/uf50-01.cnf\"\n",
     "from janusq.hyqsat import readCNF\n",
     "\n",
+    "# input cnf flie\n",
+    "file_path = \"cnf_examples/UF50/uf50-01.cnf\"\n",
     "print(readCNF(file_path))"
    ]
   }
