--- a/examples/ipynb/2_6_extend_framework_bug_identification.ipynb
+++ b/examples/ipynb/2_6_extend_framework_bug_identification.ipynb
@@ -26,38 +26,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-20 16:42:03,287\tERROR services.py:1329 -- Failed to start the dashboard \n",
-      "2024-04-20 16:42:03,349\tERROR services.py:1354 -- Error should be written to 'dashboard.log' or 'dashboard.err'. We are printing the last 20 lines for you. See 'https://docs.ray.io/en/master/ray-observability/ray-logging.html#logging-directory-structure' to find where the log file is.\n",
-      "2024-04-20 16:42:03,361\tERROR services.py:1398 -- \n",
-      "The last 20 lines of /tmp/ray/session_2024-04-20_16-41-35_264172_672/logs/dashboard.log (it contains the error message from the dashboard): \n",
-      "2024-04-20 16:41:55,283\tINFO utils.py:123 -- Module ray.dashboard.modules.actor.actor_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
-      "2024-04-20 16:41:57,825\tINFO utils.py:123 -- Module ray.dashboard.modules.data.data_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
-      "2024-04-20 16:41:59,074\tINFO utils.py:123 -- Module ray.dashboard.modules.event.event_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
-      "2024-04-20 16:41:59,103\tINFO utils.py:123 -- Module ray.dashboard.modules.healthz.healthz_agent cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
-      "2024-04-20 16:41:59,122\tINFO utils.py:123 -- Module ray.dashboard.modules.healthz.healthz_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
-      "2024-04-20 16:41:59,910\tINFO utils.py:123 -- Module ray.dashboard.modules.job.job_agent cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
-      "2024-04-20 16:41:59,917\tINFO utils.py:123 -- Module ray.dashboard.modules.job.job_head cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
-      "2024-04-20 16:41:59,956\tINFO utils.py:123 -- Module ray.dashboard.modules.log.log_agent cannot be loaded because we cannot import all dependencies. Install this module using `pip install 'ray[default]'` for the full dashboard functionality. Error: No module named 'aiohttp'\n",
-      "\n",
-      "2024-04-20 16:42:03,558\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67108864 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=0.37gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2024-04-20 16:42:06,342\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2025-01-09 18:58:12,581\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append('..')\n",
     "import os\n",
     "os.chdir(\"..\")\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
     "import logging\n",
     "logging.basicConfig(level=logging.WARN)\n",
-    "import ray\n",
-    "ray.init(log_to_driver=False)\n",
     "\n",
-    "from janusq.data_objects.algorithms import get_algorithm_circuits\n",
     "import random\n",
     "import numpy as np\n",
+    "import ray\n",
+    "ray.init(log_to_driver=False)\n",
     "from collections import defaultdict\n",
+    "\n",
+    "from janusq.data_objects.algorithms import get_algorithm_circuits\n",
     "from janusq.analysis.vectorization import RandomwalkModel\n",
     "from janusq.data_objects.backend import LinearBackend\n",
     "from janusq.data_objects.circuit import Circuit"
@@ -242,7 +229,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 32/32 [01:04<00:00,  2.03s/it]\n"
+      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: divide by zero encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: invalid value encountered in det\n",
+      "  r = _umath_linalg.det(a, signature=signature)\n",
+      "100%|██████████| 32/32 [00:05<00:00,  6.27it/s]\n"
      ]
     }
    ],
@@ -281,36 +272,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "algrithm: qft_5, identify_rate: 100.0\n",
-      "algrithm: hs_5, identify_rate: 33.333333333333336\n",
-      "algrithm: ising_5, identify_rate: 100.0\n",
-      "algrithm: qknn_5, identify_rate: 100.0\n",
-      "algrithm: qsvm_5, identify_rate: 66.66666666666667\n",
-      "algrithm: vqc_5, identify_rate: 100.0\n",
+      "algrithm: qft_5, identify_rate: 0.0\n",
+      "algrithm: hs_5, identify_rate: 100.0\n",
+      "algrithm: ising_5, identify_rate: 0.0\n",
+      "algrithm: qknn_5, identify_rate: 0.0\n",
+      "algrithm: qsvm_5, identify_rate: 100.0\n",
+      "algrithm: vqc_5, identify_rate: 33.333333333333336\n",
       "algrithm: ghz_5, identify_rate: 33.333333333333336\n",
-      "algrithm: grover_5, identify_rate: 100.0\n",
-      "algrithm: qft_6, identify_rate: 100.0\n",
-      "algrithm: hs_6, identify_rate: 100.0\n",
-      "algrithm: ising_6, identify_rate: 100.0\n",
-      "algrithm: qknn_6, identify_rate: 100.0\n",
+      "algrithm: grover_5, identify_rate: 66.66666666666667\n",
+      "algrithm: qft_6, identify_rate: 66.66666666666667\n",
+      "algrithm: hs_6, identify_rate: 0.0\n",
+      "algrithm: ising_6, identify_rate: 33.333333333333336\n",
+      "algrithm: qknn_6, identify_rate: 33.333333333333336\n",
       "algrithm: qsvm_6, identify_rate: 33.333333333333336\n",
-      "algrithm: vqc_6, identify_rate: 100.0\n",
-      "algrithm: ghz_6, identify_rate: 66.66666666666667\n",
+      "algrithm: vqc_6, identify_rate: 66.66666666666667\n",
+      "algrithm: ghz_6, identify_rate: 0.0\n",
       "algrithm: grover_6, identify_rate: 100.0\n",
-      "algrithm: qft_7, identify_rate: 100.0\n",
-      "algrithm: hs_7, identify_rate: 100.0\n",
+      "algrithm: qft_7, identify_rate: 33.333333333333336\n",
+      "algrithm: hs_7, identify_rate: 0.0\n",
       "algrithm: ising_7, identify_rate: 100.0\n",
-      "algrithm: qknn_7, identify_rate: 100.0\n",
-      "algrithm: qsvm_7, identify_rate: 33.333333333333336\n",
-      "algrithm: vqc_7, identify_rate: 100.0\n",
-      "algrithm: ghz_7, identify_rate: 0.0\n",
+      "algrithm: qknn_7, identify_rate: 33.333333333333336\n",
+      "algrithm: qsvm_7, identify_rate: 0.0\n",
+      "algrithm: vqc_7, identify_rate: 66.66666666666667\n",
+      "algrithm: ghz_7, identify_rate: 33.333333333333336\n",
       "algrithm: grover_7, identify_rate: 100.0\n",
-      "algrithm: qft_8, identify_rate: 100.0\n",
-      "algrithm: hs_8, identify_rate: 0.0\n",
+      "algrithm: qft_8, identify_rate: 66.66666666666667\n",
+      "algrithm: hs_8, identify_rate: 66.66666666666667\n",
       "algrithm: ising_8, identify_rate: 100.0\n",
-      "algrithm: qknn_8, identify_rate: 100.0\n",
-      "algrithm: qsvm_8, identify_rate: 33.333333333333336\n",
-      "algrithm: vqc_8, identify_rate: 100.0\n",
+      "algrithm: qknn_8, identify_rate: 66.66666666666667\n",
+      "algrithm: qsvm_8, identify_rate: 100.0\n",
+      "algrithm: vqc_8, identify_rate: 33.333333333333336\n",
       "algrithm: ghz_8, identify_rate: 66.66666666666667\n",
       "algrithm: grover_8, identify_rate: 100.0\n"
      ]
@@ -333,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "janusq",
    "language": "python",
    "name": "python3"
   },
@@ -347,12 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "a5cb17940ec456bfd6f6b24ecec011f7bb1827da42833da90014f36a02c01967"
-   }
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
