--- a/examples/ipynb/2_1_vectorization.ipynb
+++ b/examples/ipynb/2_1_vectorization.ipynb
@@ -24,19 +24,19 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "import logging\n",
-    "logging.basicConfig(level=logging.WARN)\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
     "import os\n",
     "os.chdir(\"..\")\n",
-    "from janusq.analysis.vectorization import RandomwalkModel, extract_device\n",
-    "\n",
-    "from janusq.data_objects.random_circuit import random_circuits, random_circuit\n",
-    "from janusq.data_objects.backend import GridBackend\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.WARN)\n",
     "\n",
     "import random\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from janusq.analysis.vectorization import RandomwalkModel, extract_device\n",
+    "from janusq.data_objects.random_circuit import random_circuits, random_circuit\n",
+    "from janusq.data_objects.backend import GridBackend"
    ]
   },
   {
@@ -68,26 +68,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌───────────────────┐ ░                  ░       ░       ░       ░ »\n",
-      "q_0: ┤ U(2π/5,4π/5,2π/5) ├─░──────────────────░───■───░───■───░───■───░─»\n",
-      "     └─┬───────────────┬─┘ ░ ┌──────────────┐ ░ ┌─┴─┐ ░ ┌─┴─┐ ░   │   ░ »\n",
-      "q_1: ──┤ U(9π/5,π,π/5) ├───░─┤ U(2π,π,7π/5) ├─░─┤ X ├─░─┤ X ├─░───┼───░─»\n",
-      "     ┌─┴───────────────┴─┐ ░ └──────────────┘ ░ └───┘ ░ └───┘ ░ ┌─┴─┐ ░ »\n",
-      "q_2: ┤ U(3π/5,π/10,7π/5) ├─░──────────────────░───────░───────░─┤ X ├─░─»\n",
-      "     └┬──────────────────┤ ░                  ░       ░       ░ └───┘ ░ »\n",
-      "q_3: ─┤ U(7π/5,π/5,6π/5) ├─░──────────────────░───────░───────░───────░─»\n",
-      "      └──────────────────┘ ░                  ░       ░       ░       ░ »\n",
-      "«     ┌───────────────────┐ ░ \n",
-      "«q_0: ┤ U(2π/5,2π/5,8π/5) ├─░─\n",
-      "«     └───────────────────┘ ░ \n",
-      "«q_1: ──────────────────────░─\n",
-      "«                           ░ \n",
-      "«q_2: ──────────■───────────░─\n",
-      "«             ┌─┴─┐         ░ \n",
-      "«q_3: ────────┤ X ├─────────░─\n",
-      "«             └───┘         ░ \n",
-      "target gate: {'name': 'cx', 'qubits': [2, 3], 'params': []}\n",
-      "generate paths: {'cx,2,3-former-cx,0,2-former-cx,0,1', 'cx,2,3-parallel-u,0-former-cx,0,2', 'cx,2,3-parallel-u,0', 'cx,2,3-former-cx,0,2-next-u,0', 'cx,2,3', 'cx,2,3-former-cx,0,2'}\n"
+      "     ┌───────────────────┐ ░            ░                       ░       ░      »\n",
+      "q_0: ┤ U(4π/5,7π/5,3π/5) ├─░───■────────░───────────────────────░───■───░──────»\n",
+      "     └─┬────────────────┬┘ ░   │        ░ ┌───────────────────┐ ░ ┌─┴─┐ ░      »\n",
+      "q_1: ──┤ U(π,4π/5,4π/5) ├──░───┼────■───░─┤ U(7π/5,6π/5,7π/5) ├─░─┤ X ├─░───■──»\n",
+      "       ├────────────────┤  ░ ┌─┴─┐  │   ░ └───────────────────┘ ░ └───┘ ░   │  »\n",
+      "q_2: ──┤ U(π,6π/5,2π/5) ├──░─┤ X ├──┼───░───────────────────────░───────░───┼──»\n",
+      "       └─┬────────────┬─┘  ░ └───┘┌─┴─┐ ░                       ░       ░ ┌─┴─┐»\n",
+      "q_3: ────┤ U(π/5,π,π) ├────░──────┤ X ├─░───────────────────────░───────░─┤ X ├»\n",
+      "         └────────────┘    ░      └───┘ ░                       ░       ░ └───┘»\n",
+      "«      ░       ░ \n",
+      "«q_0: ─░───────░─\n",
+      "«      ░       ░ \n",
+      "«q_1: ─░───■───░─\n",
+      "«      ░   │   ░ \n",
+      "«q_2: ─░───┼───░─\n",
+      "«      ░ ┌─┴─┐ ░ \n",
+      "«q_3: ─░─┤ X ├─░─\n",
+      "«      ░ └───┘ ░ \n",
+      "target gate: {'name': 'cx', 'qubits': [1, 3], 'params': []}\n",
+      "generate paths: {'cx,1,3'}\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102/102 [00:00<00:00, 228.72it/s]\n"
+      "100%|██████████| 102/102 [00:00<00:00, 236.15it/s]\n"
      ]
     },
     {
@@ -180,8 +180,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector is [0.5 1.  0.5 0.  0.5 0.  0.5 0.5 0.  0.5 0.  0.  0.  0.  0.  0.  0.  0.\n",
-      " 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "vector is [0.  0.  0.5 0.5 0.5 0.  0.5 0.5 0.5 1.  0.  0.  0.  0.  0.5 0.  0.  0.\n",
+      " 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.5 0.  0.  0.  0.  0.\n",
       " 0. ]\n"
      ]
     }
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 4, 6, 7, 9] = [0, 1, 2, 4, 6, 7, 9]\n"
+      "[2, 3, 4, 6, 7, 8, 9, 14, 30] = [2, 30, 3, 4, 14, 6, 7, 8, 9]\n"
      ]
     }
    ],
@@ -243,19 +243,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      ┌─────────────────────────┐  ░       ░ \n",
-      "q_0: ─┤ U(17.158,17.142,10.548) ├──░───────░─\n",
-      "      └┬───────────────────────┬┘  ░       ░ \n",
-      "q_1: ──┤ U(4.064,1.163,1.3467) ├───░───────░─\n",
-      "      ┌┴───────────────────────┴─┐ ░       ░ \n",
-      "q_2: ─┤ U(2.1857,0.21919,1.4346) ├─░───────░─\n",
-      "     ┌┴──────────────────────────┤ ░       ░ \n",
-      "q_3: ┤ U(2.8992,3.7818,0.082721) ├─░───────░─\n",
-      "     └┬─────────────────────────┬┘ ░       ░ \n",
-      "q_4: ─┤ U(5.0598,3.1813,2.3751) ├──░───■───░─\n",
-      "      ├─────────────────────────┤  ░ ┌─┴─┐ ░ \n",
-      "q_5: ─┤ U(5.7515,4.6988,4.7192) ├──░─┤ X ├─░─\n",
-      "      └─────────────────────────┘  ░ └───┘ ░ \n"
+      "     ┌───────────────────────────┐ ░                              ░ \n",
+      "q_0: ┤ U(0.098927,3.3127,5.4352) ├─░──────────────────────────────░─\n",
+      "     └┬─────────────────────────┬┘ ░ ┌──────────────────────────┐ ░ \n",
+      "q_1: ─┤ U(4.5756,9.2103,12.575) ├──░─┤ U(2.0892,0.64881,3.4141) ├─░─\n",
+      "      └─────────────────────────┘  ░ └──────────────────────────┘ ░ \n",
+      "q_2: ──────────────────────────────░──────────────────────────────░─\n",
+      "      ┌─────────────────────────┐  ░  ┌────────────────────────┐  ░ \n",
+      "q_3: ─┤ U(5.8885,1.3682,4.1983) ├──░──┤ U(2.668,3.3404,4.7849) ├──░─\n",
+      "      ├─────────────────────────┴┐ ░  └────────────────────────┘  ░ \n",
+      "q_4: ─┤ U(2.2057,0.62777,5.1927) ├─░──────────────■───────────────░─\n",
+      "      ├─────────────────────────┬┘ ░            ┌─┴─┐             ░ \n",
+      "q_5: ─┤ U(1.5275,4.0411,3.9872) ├──░────────────┤ X ├─────────────░─\n",
+      "      └─────────────────────────┘  ░            └───┘             ░ \n"
      ]
     }
    ],
