--- a/examples/ipynb/5_1_solve_sat_domain_problem.ipynb
+++ b/examples/ipynb/5_1_solve_sat_domain_problem.ipynb
@@ -33,11 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
-    "import logging\n",
-    "\n",
+    "os.chdir(\"..\")\n",
+    "import sys\n",
     "sys.path.append('..')\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.WARN)\n",
     "\n",
     "from janusq.hyqsat import solve_by_janusct, solve_by_minisat"
    ]
@@ -74,19 +75,19 @@
      "data": {
       "text/plain": [
        "{'restarts': 1,\n",
-       " 'conflicts': 8,\n",
-       " 'conflict cost': 0.069,\n",
-       " 'decisions': 0,\n",
+       " 'conflicts': 14,\n",
+       " 'conflict cost': 0.22,\n",
+       " 'decisions': 1,\n",
        " 'decisions cost': 0.03,\n",
-       " 'propagations': 360,\n",
-       " 'propagations cost': 0.325,\n",
-       " 'conflict literals': 59,\n",
-       " 'actual CPU time': 7.44417,\n",
-       " 'solving time': 1.1,\n",
-       " 'annealing time': 0.46,\n",
-       " 'simulation time': 1.25079,\n",
-       " 'quantum success number': 4,\n",
-       " 'quantum conflict number': 19,\n",
+       " 'propagations': 598,\n",
+       " 'propagations cost': 0.731,\n",
+       " 'conflict literals': 97,\n",
+       " 'actual CPU time': 2.36728,\n",
+       " 'solving time': 2.369,\n",
+       " 'annealing time': 0.92,\n",
+       " 'simulation time': 9.25759,\n",
+       " 'quantum success number': 10,\n",
+       " 'quantum conflict number': 36,\n",
        " 'quantum one time solve number': 0,\n",
        " 'is satisfiable': True,\n",
        " 'is sat': True}"
@@ -128,14 +129,14 @@
       "text/plain": [
        "{'restarts': 3,\n",
        " 'conflicts': 384,\n",
-       " 'conflict cost': 2.866,\n",
+       " 'conflict cost': 4.017,\n",
        " 'decisions': 463,\n",
-       " 'decisions cost': 0.47,\n",
+       " 'decisions cost': 0.64,\n",
        " 'propagations': 9130,\n",
-       " 'propagations cost': 5.591,\n",
+       " 'propagations cost': 17.075,\n",
        " 'conflict literals': 2416,\n",
-       " 'actual CPU time': 0.097112,\n",
-       " 'solving time': 10.669,\n",
+       " 'actual CPU time': 0.034302,\n",
+       " 'solving time': 24.504,\n",
        " 'annealing time': 0.0,\n",
        " 'simulation time': 0.0,\n",
        " 'quantum success number': 0,\n",
@@ -164,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 143, 'minisat': 1383}, 'conflict cost': {'janus': 1.4689999999999996, 'minisat': 12.712999999999997}, 'decisions': {'janus': 34, 'minisat': 1814}, 'decisions cost': {'janus': 0.4750000000000001, 'minisat': 2.4249999999999994}, 'propagations': {'janus': 4431, 'minisat': 32252}, 'propagations cost': {'janus': 5.236, 'minisat': 23.714}, 'conflict literals': {'janus': 847, 'minisat': 8726}, 'actual CPU time': {'janus': 37.84356, 'minisat': 1.107393}, 'solving time': {'janus': 18.371, 'minisat': 47.944}, 'annealing time': {'janus': 7.340000000000001, 'minisat': 0.0}, 'simulation time': {'janus': 36.08566, 'minisat': 0.0}, 'quantum success number': {'janus': 140, 'minisat': 0}, 'quantum conflict number': {'janus': 227, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
+      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 146, 'minisat': 1383}, 'conflict cost': {'janus': 1.131, 'minisat': 7.297000000000001}, 'decisions': {'janus': 31, 'minisat': 1814}, 'decisions cost': {'janus': 0.7610000000000001, 'minisat': 1.287}, 'propagations': {'janus': 4527, 'minisat': 32252}, 'propagations cost': {'janus': 4.4159999999999995, 'minisat': 16.072}, 'conflict literals': {'janus': 985, 'minisat': 8726}, 'actual CPU time': {'janus': 23.3142, 'minisat': 0.21076300000000003}, 'solving time': {'janus': 22.531999999999996, 'minisat': 29.849}, 'annealing time': {'janus': 6.18, 'minisat': 0.0}, 'simulation time': {'janus': 45.85356000000001, 'minisat': 0.0}, 'quantum success number': {'janus': 134, 'minisat': 0}, 'quantum conflict number': {'janus': 175, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
      ]
     }
    ],
@@ -235,19 +236,19 @@
        "    <tr>\n",
        "      <th>janus</th>\n",
        "      <td>12</td>\n",
-       "      <td>143</td>\n",
-       "      <td>1.469</td>\n",
-       "      <td>34</td>\n",
-       "      <td>0.475</td>\n",
-       "      <td>4431</td>\n",
-       "      <td>5.236</td>\n",
-       "      <td>847</td>\n",
-       "      <td>37.843560</td>\n",
-       "      <td>18.371</td>\n",
-       "      <td>7.34</td>\n",
-       "      <td>36.08566</td>\n",
-       "      <td>140</td>\n",
-       "      <td>227</td>\n",
+       "      <td>146</td>\n",
+       "      <td>1.131</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.761</td>\n",
+       "      <td>4527</td>\n",
+       "      <td>4.416</td>\n",
+       "      <td>985</td>\n",
+       "      <td>23.314200</td>\n",
+       "      <td>22.532</td>\n",
+       "      <td>6.18</td>\n",
+       "      <td>45.85356</td>\n",
+       "      <td>134</td>\n",
+       "      <td>175</td>\n",
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>12</td>\n",
@@ -256,14 +257,14 @@
        "      <th>minisat</th>\n",
        "      <td>19</td>\n",
        "      <td>1383</td>\n",
-       "      <td>12.713</td>\n",
+       "      <td>7.297</td>\n",
        "      <td>1814</td>\n",
-       "      <td>2.425</td>\n",
+       "      <td>1.287</td>\n",
        "      <td>32252</td>\n",
-       "      <td>23.714</td>\n",
+       "      <td>16.072</td>\n",
        "      <td>8726</td>\n",
-       "      <td>1.107393</td>\n",
-       "      <td>47.944</td>\n",
+       "      <td>0.210763</td>\n",
+       "      <td>29.849</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>0</td>\n",
@@ -278,19 +279,19 @@
       ],
       "text/plain": [
        "         restarts  conflicts  conflict cost  decisions  decisions cost  \\\n",
-       "janus          12        143          1.469         34           0.475   \n",
-       "minisat        19       1383         12.713       1814           2.425   \n",
+       "janus          12        146          1.131         31           0.761   \n",
+       "minisat        19       1383          7.297       1814           1.287   \n",
        "\n",
        "         propagations  propagations cost  conflict literals  actual CPU time  \\\n",
-       "janus            4431              5.236                847        37.843560   \n",
-       "minisat         32252             23.714               8726         1.107393   \n",
+       "janus            4527              4.416                985        23.314200   \n",
+       "minisat         32252             16.072               8726         0.210763   \n",
        "\n",
        "         solving time  annealing time  simulation time  \\\n",
-       "janus          18.371            7.34         36.08566   \n",
-       "minisat        47.944            0.00          0.00000   \n",
+       "janus          22.532            6.18         45.85356   \n",
+       "minisat        29.849            0.00          0.00000   \n",
        "\n",
        "         quantum success number  quantum conflict number  \\\n",
-       "janus                       140                      227   \n",
+       "janus                       134                      175   \n",
        "minisat                       0                        0   \n",
        "\n",
        "         quantum one time solve number  is satisfiable  is sat  \n",
@@ -313,7 +314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "janusq",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
