update readme and example 1_1

--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -6,60 +6,110 @@
    "source": [
     "# Getting Start\n",
     "\n",
-    "### Installation of JanusQ\n",
-    "JanusQ can be installed by docker, wheel, and soruce code. Docker is recommended, as all functions have been tested on it.\n",
-    "Linux (Ubuntu 22.04 latest) platform and Python (3.10) is prefered when instaling by wheel or soruce code.\n",
+    "## Install JanusQ\n",
     "\n",
-    "**From docker.**\n",
-    "Pull docker using docker \n",
-    "        \n",
-    "        docker pull janusq/janusq:latest\n",
+    "JanusQ can be installed by docker, wheel, and soruce code. Docker is recommended, as all functions have been tested on it. Linux (Ubuntu 22.04 latest) platform and Python (3.10) is prefered when instaling by wheel or soruce code.\n",
     "\n",
-    "The code is in \"/JanusQ\". The examples that can be directly run is in \"/JanusQ/examples\"\n",
+    "**From docker (Recommended)**\n",
     "\n",
-    "**From wheel.**\n",
-    "Download janusq.whl from \"JanusQ-main/dist\".\n",
+    "Pull docker image\n",
     "\n",
-    "        pip install janusq.whl\n",
+    "```bash\n",
+    "  docker pull janusq/janusq:latest\n",
+    "```\n",
     "\n",
-    "**From source code.**\n",
-    "Run following commends.\n",
+    "Run docker image\n",
     "\n",
-    "        git clone git@github.com:JanusQ/JanusQ.git\n",
-    "        cd JanusQ\n",
-    "        pip install -r requirements.txt\n",
+    "```bash\n",
+    "  docker run -itd -p 8888:22 -p 9999:23 --name tutorial janusq/janusq\n",
+    "```\n",
     "\n",
-    "### Structure of JanusQ\n",
+    "The docker can be accessed via\n",
     "\n",
-    "- JanusCT\n",
-    "  - vectorization\n",
-    "    - janusq/analysis/vectorization.py: This python script holds code related to the generation of path table and the vecterization of circuits\n",
-    "  - fidelity preidiction\n",
-    "    - janusq/analysis/fidelity_prediction.py: This python script holds code related to training a model and using it to predict the fidelity of a circuit.\n",
-    "  - fidelity optimization\n",
-    "    -  janusq/optimizations/mapping/mapping_ct.py：This python script holds code related to a typical compilation flow includes routing and scheduling. The routing pass transforms the circuit to satisfy the processor topology.\n",
-    "  - unitary decomposition\n",
-    "    - janusq/analysis/unitary_decompostion.py: This python script holds code related to takes a unitary as input and decomposes it into matrices of basic gates, resulting in an equivalent circuit.\n",
-    "  - bug identification: identify the potential bugs in the quantum algorithm implementation.\n",
-    "- JanusFEM\n",
-    "  - benchmarking.py. Generate a circuit for measuring calibration matrices.\n",
-    "  - mitigation.py. Implement iterative calibration, which includes quantifying interactions between qubits and constructing Bayesian networks.\n",
-    "  - tools.py. Implement data format conversion.\n",
+    "```bash\n",
+    "  ssh root@localhost -p 8888\n",
+    "```\n",
+    "\n",
+    "or\n",
+    "\n",
+    "```bash\n",
+    "  docker exec -it tutorial bash\n",
+    "```\n",
+    "\n",
+    "The source code is in \"/JanusQ/janusq\" and examples can be directly run in \"/JanusQ/examples/ipynb\". The jupyter notebook can be visited in http://localhost:9999/lab.\n",
+    "\n",
+    "**From wheel**\n",
+    "\n",
+    "Download [janusq.whl](https://github.com/JanusQ/JanusQ/blob/main/dist/janusq-0.1.0-py3-none-any.whl) and install with `pip`\n",
+    "\n",
+    "```bash\n",
+    "  pip install janusq.whl\n",
+    "```  \n",
+    "\n",
+    "**From source code**\n",
+    "\n",
+    "Pull the source code from github and install the dependencies\n",
+    "\n",
+    "```bash\n",
+    "  git clone git@github.com:JanusQ/JanusQ.git\n",
+    "  cd JanusQ\n",
+    "  pip install -r requirements.txt\n",
+    "```  \n",
+    "\n",
+    "Set up for HyQSAT\n",
+    "\n",
+    "```bash\n",
+    "  cd ./hyqsat\n",
+    "  cmake .\n",
+    "  make install\n",
+    "  cp libm* ../janusq/hyqsat\n",
+    "  cp minisat_core ../janusq/hyqsat\n",
+    "```  \n",
+    "\n",
+    "## Structure of JanusQ\n",
+    "\n",
+    "- QuCT\n",
+    "  - Vectorization\n",
+    "    - \"janusq/analysis/vectorization.py\": Python script to generate the path table and vecterization of circuits, which serves as a upstream model for various analysis and optimization tasks.\n",
+    "  - Fidelity preidiction and optimization\n",
+    "    - \"janusq/analysis/fidelity_prediction.py\": Python script to train a downstream model for circuit fidelity prediction.\n",
+    "    - \"janusq/optimizations/mapping/mapping_ct.py\"：Python script of a typical compilation flow, including routing and scheduling. The compilation flow transforms the circuit to satisfy the processor topology so as to optimize the circuit fidelity based on the prediction model.\n",
+    "  - Unitary decomposition\n",
+    "    - \"janusq/analysis/unitary_decompostion.py\": Python script that takes a unitary as input and decomposes it into matrices of basic gates, resulting in an equivalent circuit.\n",
+    "- MorphQPV\n",
+    "- QuFEM\n",
+    "  - \"janusq/optimizations/readout_mitigation/fem/benchmarking.py\": Python script to generate a circuit for measuring calibration matrices.\n",
+    "  - \"janusq/optimizations/readout_mitigation/fem/mitigation.py\": Python script to implement iterative calibration, which includes quantifying interactions between qubits and constructing Bayesian networks.\n",
+    "  - \"janusq/optimizations/readout_mitigation/fem/tools.py\": Python script to implement data format conversion.\n",
     "- HyQSAT\n",
-    "  - hyqsat/common: This dir stores common functions about cnf files, such as readCNF.\n",
-    "  - hyqsat/solveSatBy**.py: The main python function; use to solve sat problem.\n",
-    "- time crystal\n",
+    "  - \"janusq/hyqsat/common\": Directory holding common functions about cnf files, such as \"read_cnf.py\".\n",
+    "  - \"janusq/hyqsat/solver.py\": Python script holding different APIs used to solve sat problem.\n",
+    "- Choco-Q\n",
     "\n",
-    "### Note\n",
-    "1. Permission denied 'minisat_core'  \n",
-    "This file have no executable permission. You need run `chmod +x janusq/hyqsat/minisat_core` in bash."
+    "## Q&A\n",
+    "\n",
+    "1. Error \"Permission denied 'minisat_core'\"\n",
+    "\n",
+    "    Run following command\n",
+    "\n",
+    "    ```bash\n",
+    "      chmod +x janusq/hyqsat/minisat_core\n",
+    "    ```\n",
+    "\n",
+    "2. Error \"Library not loaded: @rpath/libpython3.10.dylib\" \n",
+    "\n",
+    "    Run following command\n",
+    "\n",
+    "    ```bash\n",
+    "      install_name_tool -add_rpath /path/to/python3.10/lib janusq/hyqsat/minisat_core\n",
+    "    ```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test JanusQ"
+    "## Test JanusQ"
    ]
   },
   {
@@ -80,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test QuCT"
+    "### Test QuCT"
    ]
   },
   {
@@ -92,7 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:00<00:00, 389.73it/s]\n"
+      "100%|██████████| 300/300 [00:00<00:00, 380.62it/s]\n"
      ]
     }
    ],
@@ -118,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test QuFEM"
+    "### Test QuFEM"
    ]
   },
   {
@@ -140,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'011': 10, '110': 9, '001': 634, '100': 335, '101': 28, '010': 279, '000': 8705}, {'111': 12, '011': 290, '000': 831, '010': 24, '101': 348, '100': 42, '001': 8453}, {'111': 3, '011': 23, '110': 13, '001': 609, '100': 373, '101': 21, '000': 8680, '010': 278}, {'101': 1, '011': 620, '111': 32, '010': 8863, '000': 97, '100': 2, '001': 6, '110': 379}, {'101': 2, '110': 30, '001': 83, '011': 8664, '111': 365, '000': 14, '010': 842}, {'011': 656, '111': 23, '100': 5, '001': 6, '110': 370, '000': 89, '010': 8851}, {'011': 20, '110': 12, '100': 344, '001': 555, '101': 20, '010': 323, '000': 8726}, {'011': 264, '111': 12, '010': 23, '000': 796, '101': 349, '110': 1, '100': 32, '001': 8523}, {'101': 27, '110': 7, '100': 363, '001': 646, '111': 1, '011': 26, '010': 273, '000': 8657}, {'011': 1, '111': 15, '000': 274, '010': 6, '001': 19, '100': 8803, '110': 300, '101': 582}, {'011': 7, '111': 309, '110': 27, '001': 262, '100': 814, '000': 21, '101': 8560}, {'011': 1, '111': 19, '100': 8782, '110': 286, '001': 27, '010': 15, '000': 264, '101': 606}, {'110': 8998, '100': 89, '111': 605, '011': 21, '000': 5, '010': 282}, {'101': 69, '001': 2, '100': 10, '110': 864, '010': 33, '011': 305, '111': 8717}, {'101': 6, '110': 8997, '100': 95, '011': 16, '111': 599, '000': 1, '010': 286}, {'001': 25, '100': 8802, '110': 280, '101': 571, '010': 4, '000': 293, '011': 2, '111': 23}, {'011': 13, '111': 276, '110': 25, '001': 309, '100': 805, '000': 28, '101': 8544}, {'111': 18, '011': 3, '001': 17, '100': 8796, '110': 276, '010': 11, '000': 279, '101': 600}, {'101': 29, '110': 13, '001': 571, '100': 348, '111': 1, '011': 17, '010': 291, '000': 8730}, {'110': 1, '001': 8489, '100': 41, '111': 11, '011': 291, '010': 33, '000': 792, '101': 342}, {'011': 24, '101': 29, '110': 7, '100': 345, '001': 544, '010': 286, '000': 8765}, {'011': 612, '111': 32, '100': 7, '001': 4, '110': 371, '000': 84, '010': 8890}, {'101': 5, '110': 35, '001': 84, '011': 8634, '111': 362, '000': 5, '010': 875}, {'101': 1, '011': 598, '111': 19, '010': 8898, '000': 97, '001': 5, '100': 1, '110': 381}, {'011': 16, '110': 18, '001': 583, '100': 374, '101': 18, '010': 273, '000': 8718}, {'010': 30, '000': 868, '111': 14, '011': 281, '101': 356, '100': 36, '001': 8415}]\n"
+      "[{'011': 5, '100': 41, '001': 335, '101': 1, '010': 133, '000': 9485}, {'000': 974, '010': 12, '101': 39, '011': 115, '100': 4, '001': 8856}, {'011': 6, '110': 2, '100': 44, '001': 296, '000': 9514, '010': 136, '101': 2}, {'011': 290, '111': 1, '100': 1, '001': 24, '110': 32, '000': 615, '010': 9037}, {'101': 5, '000': 55, '010': 893, '111': 30, '011': 8445, '110': 2, '001': 570}, {'100': 4, '001': 19, '110': 30, '010': 9033, '000': 616, '111': 1, '011': 297}, {'101': 1, '110': 1, '100': 35, '001': 317, '011': 6, '010': 131, '000': 9509}, {'001': 8869, '100': 6, '111': 2, '011': 120, '101': 40, '010': 12, '000': 951}, {'101': 1, '100': 35, '001': 279, '011': 5, '010': 135, '000': 9545}, {'111': 4, '100': 9462, '001': 2, '110': 142, '010': 3, '000': 86, '101': 301}, {'110': 11, '001': 77, '100': 969, '111': 114, '000': 10, '101': 8819}, {'111': 1, '001': 2, '110': 149, '100': 9474, '010': 3, '000': 67, '101': 304}, {'101': 24, '011': 2, '111': 286, '110': 8992, '100': 612, '000': 4, '010': 80}, {'000': 1, '010': 10, '001': 7, '110': 948, '100': 62, '111': 8355, '011': 68, '101': 549}, {'011': 1, '111': 306, '110': 8966, '100': 629, '000': 3, '010': 71, '101': 24}, {'111': 6, '010': 1, '000': 77, '001': 5, '100': 9445, '110': 151, '101': 315}, {'000': 8, '011': 2, '111': 106, '001': 69, '100': 966, '110': 10, '101': 8839}, {'111': 1, '000': 81, '010': 1, '001': 2, '100': 9500, '110': 126, '101': 289}, {'101': 1, '110': 4, '100': 42, '001': 287, '011': 4, '010': 130, '000': 9532}, {'011': 114, '101': 40, '010': 16, '000': 892, '100': 2, '001': 8936}, {'101': 2, '100': 37, '001': 329, '011': 5, '010': 139, '000': 9488}, {'100': 1, '110': 27, '001': 25, '011': 300, '010': 9048, '000': 599}, {'101': 2, '110': 3, '001': 508, '000': 57, '010': 964, '111': 28, '011': 8438}, {'100': 4, '001': 27, '110': 37, '010': 9012, '000': 643, '111': 2, '011': 275}, {'100': 31, '001': 320, '011': 7, '010': 109, '000': 9533}, {'001': 8874, '100': 10, '111': 1, '011': 119, '101': 37, '010': 13, '000': 946}]\n"
      ]
     }
    ],
@@ -178,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test HyQSAT"
+    "### Test HyQSAT"
    ]
   },
   {
