--- a/examples/ipynb/1_2_submit_to_cloud.ipynb
+++ b/examples/ipynb/1_2_submit_to_cloud.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Submit Quantum Circuit to the Cloud Platform\n",
     "\n",
-    "In this notebook, we introduce the API to submit tasks to quantum cloud platform."
+    "In this notebook, we introduce the API of submitting tasks to JanusQ Cloud."
    ]
   },
   {
