--- a/examples/ipynb/4_2_readout_calibration_realqc.ipynb
+++ b/examples/ipynb/4_2_readout_calibration_realqc.ipynb
@@ -156,7 +156,7 @@
     "    outout_ideal = {'1'*n_qubits:samples*0.5,'0'*n_qubits:samples*0.5}\n",
     "    \n",
     "    t_qufem_1_new = time()\n",
-    "    output_fem = mitigator.mitigate(ghz_output[i],[i for i in range(n_qubits)], cho = 1 )\n",
+    "    output_fem = mitigator.mitigate(ghz_output[i],[ _ for _ in range(n_qubits)], cho = 1 )\n",
     "    t_qufem_2_new = time()\n",
     "    output_fem = npformat_to_statuscnt(output_fem)\n",
     "\n",
